tests/negative/gold/prefixed-test.gold
tests/negative/prefixed-test.toit:8:9: error: Can't use prefix 'prefix' as an expression
  print prefix
        ^~~~~~
Compilation failed
